# azlayout

./: CMakeLists.txt  LICENSE  README.md  index.html  params.json
demo/: error.txt
demo/4inch/: error.txt  heavy.html  info.json
demo/A4/: info.json  light.html
src/: demo.sh.in  example.txt  main.cpp  test.sh.in  test.txt  translate.py
src/html/: index.html
src/vo/: utr50.cpp  utr50.h  utr50footer.txt  utr50header.txt  vo.js.in  vo.sh.in
